[package]
name = "cmd-rs"
version = "0.1.0"
authors = ["dimos <doubledimos@outlook.com>"]
edition = "2018"

[dependencies.cmd-attributes]
path = "crates/cmd-attributes"

[dependencies.cmd-core]
path = "crates/cmd-core"

[dependencies.cmd-procs]
path = "crates/cmd-procs"

[dependencies]
regex = "1.1.0"
